# openaip-rs

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
benches/: parse.rs
examples/: print.rs
src/: airspace.rs  altitude_limit.rs  altitude_reference.rs  altitude_unit.rs  category.rs  error.rs  file.rs  geometry.rs  lib.rs  point.rs  try_from.rs  types.rs  xml.rs
tests/: integration_test.rs  real_world.rs
tests/data/: de_asp.aip
