[package]
name = "openaip"
description = "OpenAIP file parser for Rust"
version = "0.2.0"
authors = ["Tobias Bieniek <tobias.bieniek@gmail.com>"]
repository = "https://github.com/Turbo87/openaip-rs"
documentation = "https://docs.rs/openaip"
license = "Apache-2.0"
edition = "2018"

[badges]
travis-ci = { repository = "Turbo87/openaip-rs", branch = "master" }

[dependencies]
minidom = "0.12.1"
thiserror = "1.0"

[dev-dependencies]
approx = "0.4.0"
criterion = "0.3.3"

[[bench]]
name = "parse"
harness = false